main.css
*{
  box-sizing: border-box;

}

@media handheld, screen and (max-width: 768px) {
  div.nav{
  }
  div.holder{
  }
  div.header>h1{
    left: 30vw;
    width: 40vw;
  }
  div.header>h3{

  }
}

body {
	margin: 0;
	padding: 0;
	background-color: white;
	font-size: 16px;
}

/*img {
	position: absolute; 
	width: 100%; 
	height: auto;
	z-index: -500;
}
*/
div.container{
	position: relative;
	height:100%;
    width:100%;
    margin: 0;
    padding: 0;
    top: -55px;
    display: block;
}
.header{
  background-image: url("MH.jpg");
  height: auto;
  min-height: 400px;
  min-width: 100%;
  background-position: center 2%;
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute ;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  z-index: -99; 
}

.nav{
  position: relative;
  top: 30vw;
  width:100%;
  z-index:1000;
  background: white;
  display: block;
}

div.holder{
  position: relative;
  top: 35vw;
  display: block;
/*  height:100%;
  min-height:100%;
  width:100%;*/
  z-index:1000;
  background: white;
  padding:0 7vw;
}

h1 {
	font-family: 'Dancing Script', serif;
	font-size: 5vw;
	font-weight: bold;
	line-height: 10vw;
	color: #ffffff;
	text-align: center;
	text-shadow:
    1px 1px 0 #000,
    2px 1px 0 #000,
    1px 2px 0 #000,
    2px 2px 0 #000;  
    height: 10vw;
    width: 35vw;
    position: absolute;
    top: 15vw;
    left: 45vw;
}

h3 {
	position: absolute;
	top: 18vw;
	left: 68vw;
	width: 30vw;
	height: 7vw;
	color: white;
	text-align: right;
	font-family: 'Play', sans-serif;
	font-size: 1.5vw;
	text-shadow:
    1px 1px 0 #000,
    2px 1px 0 #000,
    1px 2px 0 #000,
    2px 2px 0 #000;  
}

div.nav ul li:active{
		color: red;
		font-weight: bold;
}

div.nav ul li a:visited{
		color: darkRed;
		text-decoration: none;
}

div.nav ul li a:hover{
		color: red;
		font-weight: bold;
		text-decoration: none;
}

div.nav ul li a{
		color: darkred;
		font-weight: normal;
		text-decoration: none;
}

div.nav ul li {
	display: inline-block;
 	width: 19%;
 	margin: 0;
 	padding: 0;
 	text-align: center;
 	font-family: 'Play', sans-serif;
	font-size: 1.5vw;
	color: red;
	background: white;
	text-decoration: none;
 }

 div.nav ul li a{
 	color: darkred;
 	text-decoration: none;
}

div.nav ul{
	padding: 0;
}

div.holder h4{
	text-align: left;
	background: white;
	font-size: 1.5vw;
	font-family: 'Play', sans-serif;
	margin-top: 0;
	color: black;
}

div.holder ul{
	margin: 0;
	padding: 0;
	font-size: 1.3vw;
	font-family: 'Arial', sans-serif;
}

div.holder li{
	list-style: none;
	background: white;
}

div.holder p{
	margin: 0;
	padding: 0;
	background: white;
	font-size: 1.3vw;
	font-family: 'Arial', sans-serif;
	text-align: justify;
}

div.subholder{
	display: block;
    height: auto;
    vertical-align: top;
    text-align: justify;
}

div.video>iframe{
    display: block;
    margin: 0 auto;
	width: 100%;
}

div.footer{
	position: relative;
	top: 35vw;
	margin: 3vw;
	display: block;
	text-align: center;
	color: grey;
	font-size: 1.2vw;
	font-family: 'Arial', sans-serif;
}

div.subholder img {
	height: 30vw;
	width: 20vw;
	border: 5px solid indianred;
	margin: 0 1vw 0 0;
}

div.aboutsub{
	display: block;
	vertical-align: text-top;
	text-align: justify;
	width: 100%;
}

div.aboutsub img{
    margin: 0 2vw 0 0;
	border: 5px solid wheat;
	height: 30vw;
	width: auto;
}

div.aboutsub p{
	font-size: 1.3vw;
}

